[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-castle"
dynamic = ["version"]
description = "ACME E-mail S/MIME client for CASTLE Platform ACME"
readme = "README.md"
license = { text = "GPLv3" }
authors = [
  { name = "Pol Henarejos", email = "pol.henarejos@cttc.es" }
]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
dependencies = [
  "certbot",
  "josepy",
  "acme>=1.20.0",
  "setuptools",
  "imapclient",
  "dkimpy",
  "cryptography>=3.3",
  "psutil",
  "pywin32; sys_platform == 'win32'"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Communications :: Email",
  "Topic :: Security",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities"
]

[project.entry-points."certbot.plugins"]
castle-interactive = "certbot_castle.plugins.interactive:Authenticator"
castle-installer = "certbot_castle.plugins.installer:Installer"
castle-imap = "certbot_castle.plugins.imap:Authenticator"
castle-mapi = "certbot_castle.plugins.mapi:Authenticator"
castle-tb = "certbot_castle.plugins.thunderbird:Authenticator"
castle-file = "certbot_castle.plugins.file:Authenticator"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "certbot_castle._version.__version__" }
